@@ -1,6 +1,11 @@
 # ChangeLog file for monetdb-java
 # This file is updated with Maddlog
 
+* Thu May  4 2023 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
+- Corrected DatabaseMetaData method getStringFunctions() when connected
+  to Jun2023 server. It now includes the string functions from the new
+  txtsim module.
+
 * Thu Feb 23 2023 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
 - Compiled and released new jar files: monetdb-jdbc-3.3.jre8.jar and
   jdbcclient.jre8.jar
